--- a/ListaTimeFute/app/src/main/AndroidManifest.xml
+++ b/ListaTimeFute/app/src/main/AndroidManifest.xml
@@ -5,11 +5,11 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="Lista de Times Futebol"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ListaTimeFute">
-        <activity android:name=".descricao"></activity>
+
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -17,6 +17,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".Intent"></activity>
     </application>
 
 </manifest>
